<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Choose Photo</string>
    <string name="description_take_photo">Make Photo</string>
    <string name="back">back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_login_and_password">Enter login and password</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in_dialog_message">Please login before proceeding</string>
    <string name="sign_in_dialog_ok">Continue</string>
    <string name="sign_in_dialog_later">Later</string>
    <string name="sign_out_dialog_message">Do you really want to leave?</string>
    <string name="sign_out_dialog_ok">Yes</string>
    <string name="sign_out_dialog_cancel">No</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">confirm_password</string>
    <string name="name">name</string>
    <string name="signup">signup</string>
    <string name="password_error">Password mismatch</string>
    <string name="new_posts">New posts</string>

</resources>